# ros2bag_lerobot

./: .gitmodules  README.md  generic_convert.py  ros2_convert.py
ros2_ws/src/robot_controller/: package.xml  setup.py
ros2_ws/src/robot_controller/robot_controller/: robot_controller_node.py
ros2_ws/src/so_5dof_arm100/: CMakeLists.txt
ros2_ws/src/so_5dof_arm100/urdf/: so_5dof_arm100.urdf
ros2_ws/src/so_arm100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/so_arm100_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so_5dof_arm100.ros2_control.xacro  so_5dof_arm100.srdf  so_5dof_arm100.urdf.xacro
ros2_ws/src/so_arm100_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
suppliment_files/getting_started/: 0_load_dataset.ipynb  3_new_embodiment_finetuning.ipynb
suppliment_files/so_arm_100/urdf/so_5dof_arm100/: package.xml
suppliment_files/so_arm_100/urdf/so_5dof_arm100/urdf/: so_5dof_arm100.csv
