<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_5dof_arm100</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for so_5dof_arm100</p>
    <p>This package contains configuration data, 3D models and launch files
for so_5dof_arm100 robot</p>
  </description>
  <maintainer email="TODO@email.com">TODO Name</maintainer>
  <author>TODO</author>
  <license>BSD</license> <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend> <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>